
_____________________________________________________________________________________________________


                                       CFDWARP CHANGELOG

_____________________________________________________________________________________________________


2020 JAN 22a
  * in cycle/share/tsemf_share.c
    - in update_dUstar_emfield_SOR_forward(), and update_dUstar_emfield_SOR_backward(),
      added MPI_Barrier() just before free(buffer). This prevents some occasional slowdown
      problem.
       

2020 JAN 19b
  * in src/control.c
    - in find_metrics_on_all_nodes(), increased the zone size by 1 in all directions
      (needed when using the electron energy transport equation and MPI)
  * in bin
    - renamed ns_SDBD.wrp to Starikovskii.wrp (and upgraded the control file)
    
 
2020 JAN 19a
  * in bin
    - updated 3DDBD_actuator.wrp
  * in model/fluid/_*_plasma/fluid_bdry.c
    - in update_bdry_wall(), removed the line which set the electron temperature at the wall at least
      as high as the wall temperature
  * in model/fluid/_*_plasma/fluid_source.c
    - in find_Se(), reverted to the standard way of determining the electron temperature 
      source terms (as in the doc model/fluid/doc/Transport_Equations
      

2020 JAN 04a
  * in model/fluid/_Navier-Stokes_plasma/fluid.c, model/fluid/_Navier-Stokes_plasma/fluid.h,
    model/fluid/_Navier-Stokes_plasma/fluid_source.c
    - added code needed for TEMODEL_EQUILIBRIUM
    

2020 JAN 01a
  * in model/emfield/_Epotential/emfield.c
    - in find_post_variable_value_emfield(), fixed a problem related to not finding Ve 
      at the near boundary nodes
    

2019 DEC 29a
  * in model/emfield/_Epotential/emfield.c
    - in find_post_variable_value_emfield(), replaced find_Vk() by ind_Vk_from_Vk_at_interfaces()
  * in model/fluid/_Navier-Stokes/fluid_post.c
    - added kappa to post variables
  * in model/fluid/_Navier-Stokes/fluid.hh
    - increased totalpostvarfluid to (7+nd+ns)